styles/_statistic-bar.css
.statistic-bar__list {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.statistic-bar__item {
  display: flex;
  flex-direction: row;
  gap: 5px;
}

@media screen and (max-width:768px) {
  .statistic-bar__item  {
      flex-direction: column;
  }
}

progress[value] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border: none;
    width: 150px;
    border-radius: 10px;
    background: white;
  }

  progress[value]::-webkit-progress-bar {
    border-radius: 10px;
    background: white;
    padding: 3px;
  }

  progress[value][data-statistic="Happiness"]::-webkit-progress-value {
    border-radius: 10em;
    background: lightcoral;
  }
  progress[value][data-statistic="Thirst"]::-webkit-progress-value {
    border-radius: 10em;
    background: cornflowerblue;
  }
  progress[value][data-statistic="Hunger"]::-webkit-progress-value {
    border-radius: 10em;
    background: lightgreen;
  }

  progress[value][data-statistic="Happiness"]::-moz-progress-bar {
    border-radius: 10em;
    background: lightcoral;
  }
  progress[value][data-statistic="Thirst"]::-moz-progress-bar {
    border-radius: 10em;
    background: cornflowerblue;
  }
  progress[value][data-statistic="Hunger"]::-moz-progress-bar {
    border-radius: 10em;
    background: lightgreen;
  }

